infra/k8s/event-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: halbard/micro_bus:0.1.0
