infra/k8s/mod-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mod-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mod
  template:
    metadata:
      labels:
        app: mod
    spec:
      containers:
        - name: mod
          image: halbard/micro_mod:0.1.1
