infra/k8s/comments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  type: NodePort
  selector:    
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 5000
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: comments-cluster-service
spec:
  type: ClusterIP
  selector:    
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 5000
      targetPort: 5000
