infra/k8s/event-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  type: ClusterIP
  selector:    
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4999
      targetPort: 4999
