infra/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-service
spec:
  type: ClusterIP
  selector:    
    app: frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
