infra/k8s/mod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mod-service
spec:
  type: ClusterIP
  selector:    
    app: mod
  ports:
    - name: mod
      protocol: TCP
      port: 5003
      targetPort: 5003
