infra/k8s/query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  type: NodePort
  selector:    
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 5000
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: query-cluster-service
spec:
  type: ClusterIP
  selector:    
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 5000
      targetPort: 5000
