infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create/
            pathType: Prefix
            backend:
              service:
                name: posts-cluster-service
                port:
                  number: 5000
          - path: /posts/
            pathType: Prefix
            backend:
              service:
                name: query-cluster-service
                port:
                  number: 5000
          - path: /posts/?(.*)/comments/
            pathType: Prefix
            backend:
              service:
                name: comments-cluster-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-cluster-service
                port:
                  number: 3000
